# testicles

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sandbox/: __init__.py  integration_test.py  sum.py  unit_test.py
src/sandbox/: integration_test.py  test_sum_integration.py  test_sum_unit.py  unit_test.py
src/testicles/: __init__.py  _assert.py  exceptions.py  loader.py
src/testicles/cli/: __main__.py  cli.py
src/testicles/test_case/: __init__.py  test_case.py  test_result.py
src/testicles/test_runner/: __init__.py  parallel_text_test_runner.py  test_runner.py  text_test_runner.py
src/testicles/test_suite/: __init__.py  test_suite.py
