[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testicles"
version = "0.0.3"
authors = [
  { name="Oleh Pohorilyy", email="olehpohorilyy.dev@gmail.com" },
]
description = "Testing framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]